--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 <h2 id="contact.html">Contact Me</h2>
 <nav>
     <ul>
-        <li><a href="#123-456-7890"> <span>Phone</span></a></li>
-        <li><a href="#elena-nemirovskaya"> <span>Email</span></a></li>
-        <li><a href="#https://discord.gg/Fx2KM2Ry"> <span>GitHub</span></a></li>
-        <li><a href="#elena-nemirovskaya"> <span>Twitter</span></a></li>
+        <li><a href="#">Phone</a>
+        <li><a href="#">Email</a></li>
+        <li><a href="https://discord.gg/Fx2KM2Ry">GitHub</a></li>
+        <li><a href="#">Twitter</a></li>
     </ul>
 </nav>
 <div class="end"><h6>Made by Elena Nemirovskaya</h6>
